// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<OrderTableComponent/> render() should render 1`] = `
<Table
  className="table"
  hover={true}
  responsiveTag="div"
  tag="table"
>
  <thead>
    <tr>
      <th>
        Product
      </th>
      <th>
        Item price
      </th>
      <th>
        Qty
      </th>
      <th>
        Item total
      </th>
    </tr>
  </thead>
  <tbody>
    <LineItemRow
      currencyCode="USD"
      editable={true}
      key="0049e97131922dcd76f07f6eb4d7e5164dfeaebd"
      lineItem={
        Immutable.Map {
          "taxable": true,
          "price": "1.00",
          "quantity": 1,
          "product_id": 1,
          "product_exists": true,
          "properties": Immutable.List [],
          "variant_id": 31128766316567,
          "title": "Acidulous candy",
          "sku": "0987654321-1",
          "variant_title": "Red / A",
          "requires_shipping": true,
        }
      }
      onChange={[Function]}
      onDelete={[Function]}
      product={
        Object {
          "created_at": "2020-01-01 00:00:00.000000",
          "id": 1,
          "image": Object {
            "alt": "Alt",
            "id": 1,
            "src": "src",
          },
          "images": Array [
            Object {
              "alt": "Alt",
              "id": 1,
              "src": "src",
            },
          ],
          "title": "Product 1",
          "variants": Array [
            Object {
              "id": 1,
              "image_id": 1,
              "option1": null,
              "option2": null,
              "option3": null,
              "price": "9.99",
              "requires_shipping": true,
              "sku": "11111",
              "taxable": true,
              "title": "Variant 1",
            },
          ],
        }
      }
      removable={true}
      shopName="storegorgias3"
    />
    <LineItemRow
      currencyCode="USD"
      editable={true}
      key="7c5c30c24a3b1b6573b53d9da90cd08f145081b1"
      lineItem={
        Immutable.Map {
          "taxable": true,
          "price": "1.00",
          "quantity": 4,
          "product_id": 2,
          "product_exists": true,
          "properties": Immutable.List [],
          "variant_id": 31128766349335,
          "title": "Acidulous candy",
          "sku": "0987654321-2",
          "variant_title": "Red / B",
          "requires_shipping": true,
        }
      }
      onChange={[Function]}
      onDelete={[Function]}
      product={
        Object {
          "created_at": "2020-01-01 00:00:00.000000",
          "id": 2,
          "image": Object {
            "alt": "Alt",
            "id": 1,
            "src": "src",
          },
          "images": Array [
            Object {
              "alt": "Alt",
              "id": 1,
              "src": "src",
            },
          ],
          "title": "Product 2",
          "variants": Array [
            Object {
              "id": 1,
              "image_id": 1,
              "option1": null,
              "option2": null,
              "option3": null,
              "price": "9.99",
              "requires_shipping": true,
              "sku": "11111",
              "taxable": true,
              "title": "Variant 1",
            },
          ],
        }
      }
      removable={true}
      shopName="storegorgias3"
    />
  </tbody>
</Table>
`;

exports[`<OrderTableComponent/> render() should render without products 1`] = `
<Table
  className="table"
  hover={true}
  responsiveTag="div"
  tag="table"
>
  <thead>
    <tr>
      <th>
        Product
      </th>
      <th>
        Item price
      </th>
      <th>
        Qty
      </th>
      <th>
        Item total
      </th>
    </tr>
  </thead>
  <tbody>
    <LineItemRow
      currencyCode="USD"
      editable={true}
      key="0049e97131922dcd76f07f6eb4d7e5164dfeaebd"
      lineItem={
        Immutable.Map {
          "taxable": true,
          "price": "1.00",
          "quantity": 1,
          "product_id": 1,
          "product_exists": true,
          "properties": Immutable.List [],
          "variant_id": 31128766316567,
          "title": "Acidulous candy",
          "sku": "0987654321-1",
          "variant_title": "Red / A",
          "requires_shipping": true,
        }
      }
      onChange={[Function]}
      onDelete={[Function]}
      removable={true}
      shopName="storegorgias3"
    />
    <LineItemRow
      currencyCode="USD"
      editable={true}
      key="7c5c30c24a3b1b6573b53d9da90cd08f145081b1"
      lineItem={
        Immutable.Map {
          "taxable": true,
          "price": "1.00",
          "quantity": 4,
          "product_id": 2,
          "product_exists": true,
          "properties": Immutable.List [],
          "variant_id": 31128766349335,
          "title": "Acidulous candy",
          "sku": "0987654321-2",
          "variant_title": "Red / B",
          "requires_shipping": true,
        }
      }
      onChange={[Function]}
      onDelete={[Function]}
      removable={true}
      shopName="storegorgias3"
    />
  </tbody>
</Table>
`;
